# raspberry-pi-pico-on-board-temperature

./: CMakeLists.txt  main.cpp
